<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.ptidej</groupId>
	<artifactId>all-ptidej</artifactId>
	<version>1.0.0</version>
	<name>Ptidej Tool Suite</name>
	<packaging>pom</packaging>

	<modules>
		<module>Caffeine</module>
		<module>Caffeine Analyses</module>
		<module>Caffeine Examples</module>
		<module>Caffeine Tests</module>
		<module>CPL</module>
		<module>DeMIMA</module>
		<module>DeMIMA Solver 3</module>
		<module>DeMIMA Solver 4</module>
		<module>DeMIMA Solver Fingerprints</module>
		<module>DeMIMA UI</module>
		<module>DeMIMA UI Analyses</module>
		<module>DeMIMA UI AspectJ</module>
		<!-- TODO Add this module                      -->
		<!-- <module>DeMIMA UI C++</module>            -->
		<module>DeMIMA UI Layouts</module>
		<module>DeMIMA UI Primitives AWT</module>
		<!-- TODO Add this module                      -->
		<!-- <module>DeMIMA UI Primitives SWT</module> -->
		<module>DeMIMA UI Viewer</module>
		<module>DeMIMA UI Viewer AWT</module>
		<module>DeMIMA UI Viewer Extensions</module>
		<module>DeMIMA UI Viewer Standalone Swing</module>
		<module>EPI</module>
		<module>JChoco</module>
		<module>MoDeC Metamodel</module>
		<module>MoDeC Solver</module>
		<module>PADL</module>
		<module>PADL Analyses</module>
		<module>PADL Creator AOL</module>
		<module>PADL Creator AspectJ</module>
		<module>PADL Creator C# v1</module>
		<module>PADL Creator C# v2</module>
		<module>PADL Creator C++ (ANTLR)</module>
		<!-- TODO Add this module                        -->
		<!-- <module>PADL Creator C++ (Eclipse)</module> -->
		<module>PADL Creator ClassFile</module>
		<module>PADL Creator JavaFile (Eclipse)</module>
		<module>PADL Creator JavaFile (Eclipse) Parser</module>
		<module>PADL Creator JavaFile (JavaC)</module>
		<module>PADL Creator JavaFile (JavaC) Parser</module>
		<module>PADL Creator MSE</module>
		<module>PADL Creator XMI</module>
		<module>PADL Design Motifs</module>
		<module>PADL Generator</module>
		<!-- TODO Add this module                     -->
		<!-- <module>PADL Generator PageRank</module> -->
		<module>PADL Micro-pattern Analysis</module>
		<module>PADL Refactorings</module>
		<module>PADL Serialiser DB4O</module>
		<module>PADL Serialiser JOS</module>
		<module>PADL Statements</module>
		<module>PADL Statements Creator AOL</module>
		<module>PADL Statements Creator ClassFile</module>
		<module>POM</module>
		<module>SAD</module>
		<module>SAD Rules Creator</module>
		<module>SQUAD</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.release>21</maven.compiler.release>
		<maven.compiler.release.next>22</maven.compiler.release.next>
		<maven.test.redirectTestOutputToFile>true</maven.test.redirectTestOutputToFile>
	</properties>

</project>